--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,44 @@
-body{
-  background-color:black;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+:root{
+  --dark-bg: #262626;
+  --gray-1: #BCB4B4;
+  --deep-dark: #1E1E1E;
+  --gray-2: #363636;
+  --white : white;
+  --black: black;
+}
+
+p, h1, h2 {
+ color: white;
+}
+
+html{
+  font-size: 10px;
+  font-family: 'Open Sans', sans-serif;
+  background-color: var(--dark-bg);
+}
+ul,li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+img, svg{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+button{
+  outline: none
+}
+.container {
+  max-width: 1200px;
+  width: 90%;
+  margin: 0 auto;
 }
